# reminder

./: .gitignore  Dockerfile  README.md  app.py  config.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
app/: app.py
executables/: wsl_run_reminder.bat
scripts/: docker_run_reminder.bat  run_app_in_docker.ps1  run_docker.sh  stop_app_in_docker.ps1  windows_run_reminder.bat  wsl_run_reminder.bat
src/: utils.py
