[project]
name = "reminder"
version = "0.2.0"
description = ""
authors = [
    {name = "marcsusagna",email = "marcsusagna@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.scripts]
start_app = "bin.start_app:run_webapp"
remind_me = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
